[skip ci] Fix overlapping text in the guide
Fix a layout issue in the rails guides, where the navigation covers the main text, if the page is between 800 and 960 pixels wide.

Issue #33406

--- a/guides/assets/stylesheets/main.css
+++ b/guides/assets/stylesheets/main.css
@@ -276,9 +276,14 @@ body {
 #header .wrapper, #topNav .wrapper, #feature .wrapper {padding-left: 1em; max-width: 960px;}
 #feature .wrapper {max-width: 640px; padding-right: 23em; position: relative; z-index: 0;}
 
-@media screen and (max-width: 800px) {
-  #feature .wrapper { padding-right: 0; }
+@media screen and (max-width: 960px) {
+  #container .wrapper { padding-right: 21em; }
 }
+
+@media screen and (max-width: 800px) {
+  #feature .wrapper, #container .wrapper { padding-right: 0; }
+}
+
 
 /* Links
 --------------------------------------- */
